--- a/src/app/pages/maliyet/kapi-maliyet/kapi-maliyet.component.html
+++ b/src/app/pages/maliyet/kapi-maliyet/kapi-maliyet.component.html
@@ -1,4 +1,4 @@
-
+<!-- 
 
 <div class="grid grid-cols-[2fr_2fr_2fr_3fr] gap-1 ">
 
@@ -120,36 +120,22 @@
 
             </tbody>
         </table>
-        <ng-container *ngFor="let item of menu ">
-            <ul class="folder-list m-t-md flex gap-5 hover:cursor-pointer" style="padding: 0;margin-bottom: 0; ">
-                <ng-container *ngFor="let sub of item.submenu; let i = index" >
-                    <li  class="hover:bg-slate-200  text-black gap-2 ">
-                        <div class="m-2">
-                            <p-radioButton (click)="toggleNode(sub)" name="{{sub.label}}" value="{{sub.label}}" [(ngModel)]="selectedKapiGrup" inputId="{{sub.id}}"></p-radioButton>
-                            <label for="{{sub.id}}" class="ml-2 mb-0 hover:cursor-pointer">{{sub.label}}</label>
-                        </div>
-                    </li>  
-                </ng-container>
-            </ul>
-        </ng-container> 
+       
+        <mat-radio-group (change)="toggleNode()" [disabled]="radioSelect"
+        aria-labelledby="example-radio-group-label folder-list m-t-md flex gap-5 hover:cursor-pointer"
+        class="example-radio-group"
+        [(ngModel)]="selectedKapiGrup">
 
-       <!-- <div class="flex">
-        <div class="flex align-items-center">
-            <p-radioButton name="pizza" value="Cheese" [(ngModel)]="ingredient" inputId="ingredient1"></p-radioButton>
-            <label for="ingredient1" class="ml-2">Cheese</label>
-        </div>
-        
-        <div class="flex align-items-center">
-            <p-radioButton name="pizza" value="Mushroom" [(ngModel)]="ingredient" inputId="ingredient2"></p-radioButton>
-            <label for="ingredient2" class="ml-2">Mushroom</label>
-        </div>
-        
-        <div class="flex align-items-center">
-            <p-radioButton name="pizza" value="Pepper" [(ngModel)]="ingredient" inputId="ingredient3"></p-radioButton>
-            <label for="ingredient3" class="ml-2">Pepper</label>
-        </div>
-       </div> -->
+        <ng-container *ngFor="let item of menu ">
+            <ng-container *ngFor="let sub of item.submenu; let i = index" >
+                <mat-radio-button class="example-radio-button" [value]="sub.label">{{sub.label}}</mat-radio-button>
+            </ng-container>
+        </ng-container>
+
     
+
+</mat-radio-group>
+
     </div>
     <div class=" p-1 text-white flex flex-col border ">
         <table class="yks_table_group ">
@@ -167,7 +153,7 @@
                     font-size: 13px; 
                     color: #666666;">
 
-                            <span> 12.250,70 ₺ </span>
+                            <span> {{kasaMalzemeToplam}} </span>
 
 
                         </label>
@@ -187,7 +173,7 @@
                     font-size: 13px; 
                     color: #666666;">
 
-                            <span> 12.250,70 ₺ </span>
+                            <span> {{panelMalzemeToplam}}</span>
 
 
                         </label>
@@ -208,7 +194,7 @@
                     font-size: 13px; 
                     color: #666666;">
 
-                            <span>{{malzemeToplam}} </span>
+                            <span>{{mekanizmaMalzemeToplam}} </span>
 
 
                         </label>
@@ -378,18 +364,7 @@
    
     <div >
 
-        <!-- <ng-container *ngFor="let item of menu ">
-            <ul class="folder-list m-b-md" style="padding: 0">
-                <ng-container *ngFor="let sub of item.submenu; let i = index">
-                    <li (click)="toggleNode(sub)" class="hover:bg-slate-200 px-2">
-                        <a class='w-[124px] whitespace-nowrap overflow-hidden text-ellipsis'>
-                            {{sub.label}}
-                        </a>
-                    </li>
-                </ng-container>
-            </ul>
-        </ng-container> -->
-
+   
         <p-table id="row-check" [value]="bilesenler" dataKey="id" selectionMode="single"
             [(selection)]="selectedBilesenRow" [style]="{'min-height':' 700px'}" [scrollable]="true"
             scrollHeight="700px" [metaKeySelection]="true" rowGroupMode="rowspan" groupRowsBy="kapiGrubu"
@@ -399,7 +374,7 @@
                 <tr>
                     <th style="width: 50px;font-size: 13px;" rowspan="3">Sıra No</th>
                     <th style="text-align: center;color: rgb(99, 0, 0);" colspan="6">
-                      {{kapiTuru}}  Malzeme Giderleri
+                      {{selectedKapiGrup}}  Malzeme Giderleri
                         <div class="button-container" style="position: absolute;right: 0;top: 0;">
                             <div class="button-grup " style="gap: 3px !important;">
                                 <div class="img-container">
@@ -679,7 +654,7 @@
     <ng-template pTemplate="header">
         <span class="text-xl font-bold">ÜRÜNLER</span>
     </ng-template>
-    <p-table id="row-check" [value]="kabinler" dataKey="id" selectionMode="single" [(selection)]="selectedURUN"
+    <p-table id="row-check" [value]="kapiler" dataKey="id" selectionMode="single" [(selection)]="selectedURUN"
         [scrollable]="true" scrollHeight="400px" [metaKeySelection]="true">
         <ng-template pTemplate="header">
             <tr>
@@ -705,4 +680,104 @@
             class="bg-red-900 flex items-center justify-center font-bold hover:bg-red-800 hover:cursor-pointer hover:text-green-700 ">
             Hesapla</div>
     </ng-template>
+</p-dialog> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="grid grid-cols-[2fr_2fr_2fr_3fr] gap-1 " style="display: grid; grid-template-columns:2fr 2fr 2fr 3fr ; gap: 4px;">
+
+
+    <div  style="display: flex; flex-direction: column; border: 1px solid rgb(230, 230, 230); color: white; padding: 4px;">
+
+        <kapi-maliyet-form [span]="170" [label]="'Yön'">
+            <p-dropdown form-control [options]="yon" [(ngModel)]="frm.yon" optionLabel="ad"
+                (ngModelChange)="onYonChange(frm.yon)" />
+        </kapi-maliyet-form>
+        <kapi-maliyet-form [span]="170" [label]="'Kapı Yüksekliği'">
+            <p-dropdown form-control [options]="kapiYuksekligi" [(ngModel)]="frm.kapiYuksekligi" optionLabel="ad"
+                (ngModelChange)="onKapiYuksekligiChange(frm.kapiYuksekligi)" />
+        </kapi-maliyet-form>
+        <kapi-maliyet-form [span]="170" [label]="'Kapı Genişliği'">
+            <p-dropdown form-control [options]="kapiGenisligi" [(ngModel)]="frm.kapiGenisligi" optionLabel="ad"
+                (ngModelChange)="onKapiGenisligiChange(frm.kapiGenisligi)" />
+        </kapi-maliyet-form>
+        <kapi-maliyet-form [span]="170" [label]="'Kapı Tipi'">
+            <p-dropdown form-control [options]="kapiTipi" [(ngModel)]="frm.kapiTipi" optionLabel="ad"
+                (ngModelChange)="onKapiTipiChange(frm.kapiTipi)" />
+        </kapi-maliyet-form>
+        <kapi-maliyet-form [span]="170" [label]="'Kaplama'">
+            <p-dropdown form-control [options]="kaplama" [(ngModel)]="frm.kaplama" optionLabel="ad"
+                (ngModelChange)="onKaplamaChange(frm.kaplama)" />
+        </kapi-maliyet-form>
+
+        <div (click)="urunleriGoster()" form-control style="display: flex; align-items: center; justify-content: center; font-weight: bold; cursor: pointer ; background-color: #7F1D1D;">
+            Ürünleri Göster
+        </div>
+    </div>
+
+
+    <div style="display: flex; flex-direction: column; border: 1px solid rgb(230, 230, 230); color: white; padding: 4px;">
+        <kapi-maliyet-table [malzemeToplam]="malzemeToplam"></kapi-maliyet-table>
+    </div>
+    <div style="display: flex; flex-direction: column; border: 1px solid rgb(230, 230, 230); color: white; padding: 4px;">
+        <kapi-fiyat-table></kapi-fiyat-table>
+    </div>
+</div>
+
+<div  style="display: grid; grid-template-columns:1fr 1fr; gap: 12px;">
+    <div>
+        <kapi-malzeme-giderler-table [malzemeGiderler]="bilesenler" [selectedMalzemeGiderler]="selectedBilesenRow"
+            [malzemeToplam]="malzemeToplam"></kapi-malzeme-giderler-table>
+    </div>
+    <div>
+        <kapi-iscilik-giderler-table [iscilikGiderler]="iscilikGiderler"></kapi-iscilik-giderler-table>
+        <kapi-genel-giderler-table [genelGiderler]="genelGiderler"
+            [selectedGenelGiderler]="selectedBilesenRow"></kapi-genel-giderler-table>
+
+    </div>
+</div>
+
+<p-dialog header="Header" [(visible)]="visible" [modal]="true" [style]="{ width: '50vw' }">
+    <ng-template pTemplate="header">
+        <span  style="font-size: 20px; font-weight: bold;">ÜRÜNLER</span>
+    </ng-template>
+    <p-table id="row-check" [value]="kabinler" dataKey="id" selectionMode="single" [(selection)]="selectedURUN"
+        [scrollable]="true" scrollHeight="400px" [metaKeySelection]="true">
+        <ng-template pTemplate="header">
+            <tr>
+                <th>Ad</th>
+                <th></th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-urun let-rowIndex="rowIndex">
+            <tr [pSelectableRow]="urun" [pSelectableRowIndex]="rowIndex" [pEditableRow]="urun"
+                (click)="onRowClickUrunler(urun)">
+                <td>{{ urun.ad }}</td>
+                <td>
+                    İşlemler
+                </td>
+            </tr>
+        </ng-template>
+    </p-table>
+    <ng-template pTemplate="footer" let-urun>
+        <div (click)="Hesapla(selectedURUN)" style="background-color: #7F1D1D; display: flex; align-items: center; justify-content: center; font-weight: bold;cursor: pointer;"
+            >
+            Hesapla</div>
+    </ng-template>
 </p-dialog>
+
