--- a/src/app/pages/tanimlar/kapi/kapi.component.html
+++ b/src/app/pages/tanimlar/kapi/kapi.component.html
@@ -17,7 +17,7 @@
           <li (click)="yeni()" type="button">
             <a class="dropdown-item dropdown-action-item">Yeni Kapı Oluştur</a>
           </li>
-          <li type="button">
+          <li (click)="kapiBilesenEkle()" type="button">
             <a class="dropdown-item dropdown-action-item">Kapı Bileşenleri</a>
           </li>
   
@@ -368,6 +368,112 @@
     </ng-template>
   </p-dialog>
   
+  <!-- KAPI BİLEŞENLERİ Ekleme  -->
+
+  <p-dialog header="Header" [(visible)]="kapiBilesenVisible" [modal]="true" [style]="{ width: '40vw' }">
+    <ng-template pTemplate="header">
+      <span class="text-xl font-bold">KAPI BİLEŞEN</span>
+    </ng-template>
+  
+
+
+
+
+    <div class="grid grid-cols-[1fr] gap-1 ">
+      
+  
+      <div class="grid  gap-1">
+        
+        <div class=" p-1 text-white flex flex-col border ">
+            <kapi-form [span]="170" [label]="'Ad'">
+                <input form-control [(ngModel)]="frmKapiBilesen.ad" name="ad"
+                    class="form-control shadow-none form-control-nullable" id="exampleFormControlInput1">
+              </kapi-form>
+            <kapi-form [span]="170" [label]="'Tür'">
+                <p-dropdown form-control [options]="tur" [(ngModel)]="frmKapiBilesen.tur" optionLabel="ad"
+                    (ngModelChange)="onYonChange(frmKapiBilesen.tur)" />
+            </kapi-form>
+           
+           
+        
+        </div>
+        <p-table id="row-check" [value]="kapiBilesenler" [style]="{'min-height':' 350px'}" [scrollable]="true"
+          scrollHeight="700px" selectionMode="single" [(selection)]="selectedKapiBilesenRow">
+          <ng-template pTemplate="header">
+            <tr>
+              <th style="width: 50px;font-size: 13px;" rowspan="3">Sıra No</th>
+              <th style="text-align: center;color: rgb(99, 0, 0);" colspan="6">
+                Malzeme Giderleri
+                <div class="button-container" style="position: absolute;right: 0;top: 0;">
+                  <div (click)="stokEkleKapiBilesenDialog()" class="button-grup " style="gap: 3px !important;">
+                    <div class="img-container">
+                      <img style="width: 25px; height: 25px;" src="../../../../../assets/icons/add-file.png" alt="">
+                    </div>
+  
+                  </div>
+  
+                  <div class="button-grup " style="gap: 3px !important;">
+                    <div class="img-container">
+                      <img style="width: 25px; height: 25px;" src="../../../../../assets/icons/delete-file.png" alt="">
+                    </div>
+                  </div>
+  
+                  
+  
+                </div>
+              </th>
+            </tr>
+            <tr>
+              <th style="font-size: 13px;">Malzeme Adı</th>
+              <th style="font-size: 13px;">a=Miktar</th>
+              <th style="font-size: 13px;">Birim</th>
+               <th></th>
+            </tr>
+          </ng-template>
+          <ng-template pTemplate="body" let-product let-rowIndex="rowIndex">
+            <tr [pSelectableRow]="product" [pSelectableRowIndex]="rowIndex" [pEditableRow]="product">
+              <td>{{ rowIndex+1 }} </td>
+              <td>{{ product.stok.ad }}</td>
+              <td [pEditableColumn]="product.miktar" pEditableColumnField="miktar">
+                <p-cellEditor>
+                  <ng-template pTemplate="input">
+                    <input type="number" form-control [(ngModel)]="product.miktar" name="miktar"
+                      class="form-control shadow-none form-control-nullable" id="exampleFormControlInput1">
+                  </ng-template>
+                  <ng-template pTemplate="output">
+                    {{product.miktar }}
+                  </ng-template>
+                </p-cellEditor>
+              </td>
+              <td>{{ product.stok.birim }}</td>
+              <td style="padding: 0;">
+                <div class="flex gap-3">
+                  <button pButton type="button" icon="pi pi-pencil" ><i class="fa-regular fa-trash-can text-lg hover:text-red-900"></i></button>
+                  <button pButton type="button" icon="pi pi-trash" class="p-button-danger" ><i class="fa-solid fa-pen-to-square text-lg hover:text-yellow-700"></i></button>
+                </div>
+            </td>
+            </tr>
+          </ng-template>
+          <ng-template pTemplate="footer">
+            <tr>
+              <td colspan="4" class="text-right" style="font-size: 13px;">Toplam</td>
+              <td style="font-size: 13px;">{{malzemeToplam | currency: '₺'}}</td>
+            </tr>
+          </ng-template>
+        </p-table>
+      </div>
+  
+  
+  
+    </div>
+  
+  
+    <ng-template pTemplate="footer" let-urun>
+      <div (click)="kaydetKapiBilesen()"
+        class="bg-green-900 flex items-center justify-center font-bold hover:bg-green-800 hover:cursor-pointer text-white ">
+        KAYDET</div>
+    </ng-template>
+  </p-dialog>
   
   
   
@@ -439,10 +545,7 @@
   
   
     <ng-template pTemplate="footer" let-urun>
-      <!-- <div (click)="kaydet()"
-        class="bg-green-900 flex items-center justify-center font-bold hover:bg-green-800 hover:cursor-pointer text-white ">
-        EKLE</div> -->
-  
+
         <div class="flex justify-end">
           <div (click)="stokEkle()" style="width: 60px;" class="bg-green-900 flex items-center justify-center font-bold hover:bg-green-800 hover:cursor-pointer text-white px-2">
            Ekle
