--- a/src/app/pages/maliyet/kapi-maliyet/kapi-maliyet.component.html
+++ b/src/app/pages/maliyet/kapi-maliyet/kapi-maliyet.component.html
@@ -699,7 +699,7 @@
 
 
 
-<div class="grid grid-cols-[2fr_2fr_2fr_3fr] gap-1 " style="display: grid; grid-template-columns:2fr 2fr 2fr 3fr ; gap: 4px;">
+<div  style="display: grid; grid-template-columns:2fr 2fr 2fr 2fr 2fr ; gap: 4px;">
 
 
     <div  style="display: flex; flex-direction: column; border: 1px solid rgb(230, 230, 230); color: white; padding: 4px;">
@@ -716,6 +716,10 @@
             <p-dropdown form-control [options]="kapiGenisligi" [(ngModel)]="frm.kapiGenisligi" optionLabel="ad"
                 (ngModelChange)="onKapiGenisligiChange(frm.kapiGenisligi)" />
         </kapi-maliyet-form>
+
+    </div>
+    <div  style="display: flex; flex-direction: column; border: 1px solid rgb(230, 230, 230); color: white; padding: 4px;">
+    
         <kapi-maliyet-form [span]="170" [label]="'Kapı Tipi'">
             <p-dropdown form-control [options]="kapiTipi" [(ngModel)]="frm.kapiTipi" optionLabel="ad"
                 (ngModelChange)="onKapiTipiChange(frm.kapiTipi)" />
@@ -729,12 +733,31 @@
             Ürünleri Göster
         </div>
     </div>
-
-
     <div style="display: flex; flex-direction: column; border: 1px solid rgb(230, 230, 230); color: white; padding: 4px;">
-        <kapi-maliyet-table [malzemeToplam]="malzemeToplam"></kapi-maliyet-table>
+        
+        <kapi-maliyet-form  [span]="196" [label]="'Ortalama Çalışan Maaşı'">
+            <input [disabled]="true" form-control [(ngModel)]="frm.ortalamaPersonelMaasi" 
+            class="form-control shadow-none form-control-nullable" id="exampleFormControlInput1">
+        </kapi-maliyet-form> 
+       
+        <kapi-maliyet-form [span]="196" [label]="'Tahmini Çalışan Sayısı'">
+            <input [disabled]="false" form-control [(ngModel)]="frm.tahminiCalisanSayisi" 
+            class="form-control shadow-none form-control-nullable" id="exampleFormControlInput1">
+        </kapi-maliyet-form> 
+
+        <kapi-maliyet-form [span]="196" [label]="'Günlük kapi Üretimi'">
+            <input [disabled]="false" form-control [(ngModel)]="frm.gunlukUretimSayisi" 
+                   class="form-control shadow-none form-control-nullable" id="exampleFormControlInput1">
+        </kapi-maliyet-form> 
+        
     </div>
-    <div style="display: flex; flex-direction: column; border: 1px solid rgb(230, 230, 230); color: white; padding: 4px;">
+
+    <div style="display: flex; flex-direction: column; border: 1px solid rgb(230, 230, 230); color: white; padding: 4px; background-color: rgb(231 231 231);
+    box-shadow: 5px 3px 30px #858585;">
+        <kapi-maliyet-table [malzemeToplam]="malzemeToplam" [iscilikToplam]="iscilikToplam" [genelGiderToplam]="genelGiderToplam" [toplamMaliyet]="toplamMaliyet"></kapi-maliyet-table>
+    </div>
+    <div style="display: flex; flex-direction: column; border: 1px solid rgb(230, 230, 230); color: white; padding: 4px; background-color: rgb(231 231 231);
+    box-shadow: 5px 3px 30px #858585;">
         <kapi-fiyat-table></kapi-fiyat-table>
     </div>
 </div>
