--- a/src/app/pages/maliyet/makine-sasesi/makine-sasesi.component.html
+++ b/src/app/pages/maliyet/makine-sasesi/makine-sasesi.component.html
@@ -1,122 +1,4 @@
 <!-- 
-<div class="grid grid-cols-[2fr_2fr_1fr] gap-1 ">
-
-    <div class=" p-1 text-white">
-        <div class="card h-full ">
-            <div class="card-body  rounded overflow-hidden ">
-                <div style="padding: 0 10px;">
-                    <p-divider />
-
-                    <makine-sasesi-maliyet-form [span]="130" [label]="'Şase Tipi'">
-                        <p-dropdown form-control [options]="saseTipi" [(ngModel)]="frm.saseTipi" optionLabel="ad"
-                        (ngModelChange)="onSaseTipiChange(frm.saseTipi)" />
-                    </makine-sasesi-maliyet-form>
-                    <makine-sasesi-maliyet-form [span]="130" [label]="'Kapasite'">
-                        <p-dropdown form-control [options]="kapasite" [(ngModel)]="frm.kapasite" optionLabel="deger"
-                        (ngModelChange)="onKapasiteChange(frm.kapasite)" />
-                    </makine-sasesi-maliyet-form>
-
-                    <div (click)="getUrun()" form-control class="bg-red-900 flex items-center justify-center">Uygula</div>
-
-                </div>
-            </div>
-            <div class="card-footer py-1">
-                <small class="text-muted flex justify-between items-center">
-                    Son Hesapla: 3 gün önce
-
-                    <div (click)="maliyetHesabi()" class="hover:cursor-pointer hover:bg-slate-200 p-1 rounded-sm text-base">
-                        Hesapla</div>
-                </small>
-            </div>
-        </div>
-    </div>
-    <div class=" p-1 text-white flex flex-col border ">
-
-        <p-table  [value]="rowData" dataKey="id" selectionMode="multiple" [(selection)]="selectedRows"  [scrollable]="true" 
-        scrollHeight="400px" 
-            [metaKeySelection]="false" [tableStyle]="{'min-width': '50rem'}">
-            <ng-template pTemplate="header">
-                <tr>
-                    <th style="width: 4rem"><p-tableHeaderCheckbox /></th>
-                    <th>Ad</th>
-                    <th>Miktar</th>
-                    <th>Birim</th>
-                    <th>Birim Fiyat</th>
-                    <th>Döviz</th>
-                    <th>Toplam Fiyat</th>
-                </tr>
-            </ng-template>
-            <ng-template pTemplate="body" let-product let-rowIndex="rowIndex">
-                <tr [pSelectableRow]="product" [pSelectableRowIndex]="rowIndex" [pEditableRow]="product">
-                    <td>
-                        <p-tableCheckbox [value]="product" />
-                    </td>
-                    <td>{{ product.ad }}</td>
-                    <td>{{ product.miktar }}</td>
-                    <td>{{ product.birim }}</td>
-                    <td>{{ product.birimFiyat }}</td>
-                    <td>{{ product.dovizCinsi }}</td>
-                    <td>{{product.dovizFiyat*product.miktar }}</td>
-                </tr>
-            </ng-template>
-        </p-table>
-    </div>
-    <div class=" p-1 text-white">
-        <p-table  id="row-check" [value]="personeller" dataKey="id" selectionMode="multiple" [(selection)]="selectedPersonelRows"
-            [metaKeySelection]="false">
-            <ng-template pTemplate="header">
-                <tr>
-                    <th style="width: 4rem"><p-tableHeaderCheckbox /></th>
-                    <th>Ad</th>
-                </tr>
-            </ng-template>
-            <ng-template pTemplate="body" let-product let-rowIndex="rowIndex">
-                <tr >
-                    <td>
-                        <p-tableCheckbox [value]="product" />
-                    </td>
-                    <td>{{ product.ad }}</td>
-                </tr>
-            </ng-template>
-        </p-table>
-    </div>
-</div>
-<table class="yks_table_group ">
-    <tbody>
-        <tr style="height: 25px !important;">
-            <td class="yks_td_label" style="border-left: #000000; text-align: end; text-align: end;">
-                <label style=" min-width: 160px; font-weight: 600; font-size: 13px; color: #7a0000;">İşçilik :
-                </label>
-            </td>
-            <td style="width: 100%;">
-
-                <label style=" min-width: 60px; 
-                font-weight: 600; 
-                font-size: 13px; 
-                color: #666666;">
-                    <span> 12.250,70 ₺ </span>
-                </label>
-            </td>
-        </tr>
-        <tr style="height: 25px !important;">
-            <td class="yks_td_label" style="border-left: #000000; text-align: end; text-align: end;">
-
-                <label style=" min-width: 160px; font-weight: 600; font-size: 13px; color: #7a0000;">Birim Maliyet :
-                </label>
-            </td>
-            <td style="width: 100%;">
-                <label style=" min-width: 60px; 
-                font-weight: 600; 
-                font-size: 13px; 
-                color: #666666;">
-                  <span> {{birimMaliyet}}</span>
-                </label>
-            </td>
-
-        </tr>
-    </tbody>
-</table> -->
-
 <div class="grid grid-cols-[2fr_2fr_4fr] gap-1 ">
 
 
@@ -453,7 +335,7 @@
                 <tr>
                     <td colspan="5">
                         <button [pRowToggler]="customer" class="p-button-text p-button-rounded p-button-plain mr-2 " style="width: 30px ; height: 30px;">
-                            <!-- <i class="fa-solid fa-caret-up"></i> -->
+                           
                             <i class="fa-solid fa-caret-down"></i>
                         </button>
                         <span class="font-bold ml-2">{{customer.gorev.ad}}</span>
@@ -593,7 +475,7 @@
     <ng-template pTemplate="header">
         <span class="text-xl font-bold">ÜRÜNLER</span>
     </ng-template>
-    <p-table id="row-check" [value]="kabinler" dataKey="id" selectionMode="single" [(selection)]="selectedURUN"
+    <p-table id="row-check" [value]="makine-sasesiler" dataKey="id" selectionMode="single" [(selection)]="selectedURUN"
         [scrollable]="true" scrollHeight="400px" [metaKeySelection]="true">
         <ng-template pTemplate="header">
             <tr>
@@ -617,6 +499,76 @@
 
         <div (click)="Hesapla(selectedURUN)"
             class="bg-red-900 flex items-center justify-center font-bold hover:bg-red-800 hover:cursor-pointer hover:text-green-700 ">
+            Hesapla</div>
+    </ng-template>
+</p-dialog> -->
+
+
+<div class="grid grid-cols-[2fr_2fr_2fr_3fr] gap-1 " style="display: grid; grid-template-columns:2fr 2fr 2fr 3fr ; gap: 4px;">
+
+
+    <div  style="display: flex; flex-direction: column; border: 1px solid rgb(230, 230, 230); color: white; padding: 4px;">
+
+        <makine-sasesi-maliyet-form [span]="130" [label]="'Şase Tipi'">
+            <p-dropdown form-control [options]="saseTipi" [(ngModel)]="frm.saseTipi" optionLabel="ad"
+            (ngModelChange)="onSaseTipiChange(frm.saseTipi)" />
+        </makine-sasesi-maliyet-form>
+        <makine-sasesi-maliyet-form [span]="130" [label]="'Kapasite'">
+            <p-dropdown form-control [options]="kapasite" [(ngModel)]="frm.kapasite" optionLabel="deger"
+            (ngModelChange)="onKapasiteChange(frm.kapasite)" />
+        </makine-sasesi-maliyet-form>
+        <div (click)="urunleriGoster()" form-control style="display: flex; align-items: center; justify-content: center; font-weight: bold; cursor: pointer ; background-color: #7F1D1D;">
+            Ürünleri Göster
+        </div>
+    </div>
+
+    
+    <div style="display: flex; flex-direction: column; border: 1px solid rgb(230, 230, 230); color: white; padding: 4px; background-color: rgb(231 231 231);box-shadow: 5px 3px 30px #858585;">
+        <makine-sasesi-maliyet-table [malzemeToplam]="malzemeToplam"></makine-sasesi-maliyet-table>
+    </div>
+    <div style="display: flex; flex-direction: column; border: 1px solid rgb(230, 230, 230); color: white; padding: 4px; background-color: rgb(231 231 231);box-shadow: 5px 3px 30px #858585;">
+        <makine-sasesi-fiyat-table></makine-sasesi-fiyat-table>
+    </div>
+</div>
+
+<div  style="display: grid; grid-template-columns:1fr 1fr; gap: 12px;">
+    <div>
+        <makine-sasesi-malzeme-giderler-table [malzemeGiderler]="bilesenler" [selectedMalzemeGiderler]="selectedBilesenRow"
+            [malzemeToplam]="malzemeToplam"></makine-sasesi-malzeme-giderler-table>
+    </div>
+    <div>
+        <makine-sasesi-iscilik-giderler-table [iscilikGiderler]="iscilikGiderler"></makine-sasesi-iscilik-giderler-table>
+        <makine-sasesi-genel-giderler-table [genelGiderler]="genelGiderler"
+            [selectedGenelGiderler]="selectedBilesenRow"></makine-sasesi-genel-giderler-table>
+
+    </div>
+</div>
+
+<p-dialog header="Header" [(visible)]="visible" [modal]="true" [style]="{ width: '50vw' }">
+    <ng-template pTemplate="header">
+        <span  style="font-size: 20px; font-weight: bold;">ÜRÜNLER</span>
+    </ng-template>
+    <p-table id="row-check" [value]="kabinler" dataKey="id" selectionMode="single" [(selection)]="selectedURUN"
+        [scrollable]="true" scrollHeight="400px" [metaKeySelection]="true">
+        <ng-template pTemplate="header">
+            <tr>
+                <th>Ad</th>
+                <th></th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-urun let-rowIndex="rowIndex">
+            <tr [pSelectableRow]="urun" [pSelectableRowIndex]="rowIndex" [pEditableRow]="urun"
+                (click)="onRowClickUrunler(urun)">
+                <td>{{ urun.ad }}</td>
+                <td>
+                    İşlemler
+                </td>
+            </tr>
+        </ng-template>
+    </p-table>
+    <ng-template pTemplate="footer" let-urun>
+        <div (click)="Hesapla(selectedURUN)" style="background-color: #7F1D1D; display: flex; align-items: center; justify-content: center; font-weight: bold;cursor: pointer;"
+            >
             Hesapla</div>
     </ng-template>
 </p-dialog>
